# rail_mesh_icp

./: .travis.yml  AUTHORS.md  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
cad_models/: bin.pcd  bin.ply  bin_minimal.pcd  bin_minimal.ply  corner.pcd  corner.ply  handle.pcd  handle.ply  schuck.pcd  schuck.ply  schuck_and_wall.pcd  schuck_and_wall.ply
include/fetchit_icp/: ICPMatching.h  TemplateMatching.h
include/rail_mesh_icp/: ICPMatching.h  TemplateMatching.h
launch/: detect_kit_demo.launch  detect_schunk_demo.launch  mesh_sampler_demo.launch  robot_bag_view.launch  start_icp_matching.launch  template_match_demo.launch
src/: ICPMatching.cpp  TemplateMatching.cpp  icp_matcher_node.cpp  template_matcher_node.cpp
srv/: ICPMatch.srv  TemplateMatch.srv
tools/: mesh_sampler_node.cpp
