<?xml version="1.0"?>
<package format="2">

  <name>rail_mesh_icp</name>
  <version>0.0.2</version>
  <description>Enables matching a mesh model file (e.g. STL) to a point cloud using ROS.</description>

  <maintainer email="adaruna3@gatech.edu">Angel Daruna</maintainer>

  <license>BSD 2-Clause License</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>message_runtime</depend>
  <depend>message_generation</depend>

</package>
